src/test/deca/syntax/valid/resultats/test6_print-lex.res
'{': [@0,267:267='{',<36>,16:0]
'print': [@1,270:274='print',<17>,17:1]
'(': [@2,275:275='(',<34>,17:6]
STRING: [@3,276:280='"Hel"',<47>,17:7]
')': [@4,281:281=')',<35>,17:12]
';': [@5,282:282=';',<39>,17:13]
'println': [@6,285:291='println',<18>,18:1]
'(': [@7,292:292='(',<34>,18:8]
STRING: [@8,293:296='"lo"',<47>,18:9]
')': [@9,297:297=')',<35>,18:13]
';': [@10,298:298=';',<39>,18:14]
'printx': [@11,301:306='printx',<20>,19:1]
'(': [@12,307:307='(',<34>,19:7]
STRING: [@13,308:312='"Hel"',<47>,19:8]
')': [@14,313:313=')',<35>,19:13]
';': [@15,314:314=';',<39>,19:14]
'printlnx': [@16,317:324='printlnx',<19>,20:1]
'(': [@17,325:325='(',<34>,20:9]
STRING: [@18,326:329='"lo"',<47>,20:10]
')': [@19,330:330=')',<35>,20:14]
';': [@20,331:331=';',<39>,20:15]
'print': [@21,334:338='print',<17>,21:1]
'(': [@22,339:339='(',<34>,21:6]
STRING: [@23,340:342='"H"',<47>,21:7]
',': [@24,343:343=',',<33>,21:10]
STRING: [@25,344:346='"e"',<47>,21:11]
',': [@26,347:347=',',<33>,21:14]
STRING: [@27,348:350='"l"',<47>,21:15]
',': [@28,351:351=',',<33>,21:18]
STRING: [@29,352:354='"l"',<47>,21:19]
',': [@30,355:355=',',<33>,21:22]
STRING: [@31,356:359='"o "',<47>,21:23]
',': [@32,360:360=',',<33>,21:27]
INT: [@33,361:361='1',<1>,21:28]
')': [@34,362:362=')',<35>,21:29]
';': [@35,363:363=';',<39>,21:30]
'}': [@36,365:365='}',<37>,22:0]
