src/test/deca/syntax/invalid/resultats/test26_ifelse-lex.res
'{': [@0,301:301='{',<36>,14:0]
IDENT: [@1,304:306='int',<26>,15:1]
IDENT: [@2,308:308='i',<26>,15:5]
';': [@3,309:309=';',<39>,15:6]
'if': [@4,312:313='if',<11>,16:1]
'(': [@5,314:314='(',<34>,16:3]
'false': [@6,315:319='false',<10>,16:4]
')': [@7,320:320=')',<35>,16:9]
'{': [@8,321:321='{',<36>,16:10]
IDENT: [@9,325:325='i',<26>,17:2]
'=': [@10,327:327='=',<29>,17:4]
INT: [@11,329:329='1',<1>,17:6]
';': [@12,330:330=';',<39>,17:7]
'}': [@13,333:333='}',<37>,18:1]
'else': [@14,335:338='else',<9>,18:3]
'{': [@15,340:340='{',<36>,18:8]
IDENT: [@16,344:344='i',<26>,19:2]
'=': [@17,346:346='=',<29>,19:4]
INT: [@18,348:348='2',<1>,19:6]
';': [@19,349:349=';',<39>,19:7]
'}': [@20,352:352='}',<37>,20:1]
'else': [@21,354:357='else',<9>,20:3]
'{': [@22,359:359='{',<36>,20:8]
IDENT: [@23,363:363='i',<26>,21:2]
'=': [@24,365:365='=',<29>,21:4]
INT: [@25,367:367='3',<1>,21:6]
';': [@26,368:368=';',<39>,21:7]
'}': [@27,372:372='}',<37>,22:1]
'println': [@28,377:383='println',<18>,24:1]
'(': [@29,384:384='(',<34>,24:8]
STRING: [@30,385:391='"Hello"',<47>,24:9]
')': [@31,392:392=')',<35>,24:16]
';': [@32,393:393=';',<39>,24:17]
'}': [@33,395:395='}',<37>,25:0]
